5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4001/executions/1635_2445.log
== TEST (2019-04-04 18:47:25) 
-- CODE:
# Entradas
T = input("Temperatura (C/F)? ")
V = float(input("Valor: "))
# Variavel
C = (5/9) * (V - 32)
F = (9/5) * (V + 32)
if (T == C):
	msg = F
else:
	msg = C
# Saida
print(roound(msg, 2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(roound(msg, 2))
NameError: name 'roound' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:47:35) 
-- CODE:
# Entradas
T = input("Temperatura (C/F)? ")
V = float(input("Valor: "))
# Variavel
C = (5/9) * (V - 32)
F = (9/5) * (V + 32)
if (T == C):
	msg = F
else:
	msg = C
# Saida
print(roound(msg, 2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(roound(msg, 2))
NameError: name 'roound' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:47:51) 
-- CODE:
# Entradas
T = input("Temperatura (C/F)? ")
V = float(input("Valor: "))
# Variavel
C = (5/9) * (V - 32)
F = (9/5) * (V + 32)
if (T == C):
	msg = F
else:
	msg = C
# Saida
print(round(msg, 2))


-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:48:00) 
-- CODE:
# Entradas
T = input("Temperatura (C/F)? ")
V = float(input("Valor: "))
# Variavel
C = (5/9) * (V - 32)
F = (9/5) * (V + 32)
if (T == C):
	msg = F
else:
	msg = C
# Saida
print(round(msg, 2))


-- EXECUTION TIME:
0.215101
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:49:02) 
-- CODE:
# Entradas
T = input("Temperatura (C/F)? ")
V = float(input("Valor: "))
# Variavel
C = (5/9) * (V - 32)
F = (9/5) * (V + 32)
if (T == C):
	msg = F
else:
	msg = C
# Saida
print(round(msg, 2))


-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:49:27) 
-- CODE:
# Entradas
T = input("Temperatura (C/F)? ")
V = float(input("Valor: "))
# Variavel
C = (5/9) * (V - 32)
F = (9/5) * (V + 32)
if (T == C):
	msg = F
else:
	msg = C
# Saida
print(round(msg, 2))


-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:50:10) 
-- CODE:
# Entradas
T = input("Temperatura (C/F)? ")
V = float(input("Valor: "))
# Variavel
C = (5/9) * (V - 32)
F = (9/5) * (V + 32)
if (T == C):
	msg = F
else:
	msg = C
# Saida
print(round(msg, 2))


-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:51:09) 
-- CODE:
# Entradas
T = input("Temperatura (C/F)? ")
V = float(input("Valor: "))
# Variavel
C = (5/9) * (V - 32)
F = (9/5) * (V + 32)
if (T == C):
	msg = C
else:
	msg = F
# Saida
print(round(msg, 2))


-- OUTPUT:
633.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:57:15) 
-- CODE:
# Entradas
T = input("Temperatura (C/F)? ")
V = float(input("Valor: "))
# Variavel
Cs = (5/9) * (V - 32)
Fh = (9/5) * (V + 32)
if (T == C):
	msg = Fh
else:
	msg = Cs
print(round(msg, 2))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if (T == C):
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:58:27) 
-- CODE:
# Entradas
T = input("Temperatura (C/F)? ")
V = float(input("Valor: "))
# Variavel
Cs = (5/9) * (V - 32)
Fh = (9/5) * (V + 32)
if (T == 'C'):
	msg = Fh
else:
	msg = Cs
print(round(msg, 2))



-- OUTPUT:
633.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:58:38) 
-- CODE:
# Entradas
T = input("Temperatura (C/F)? ")
V = float(input("Valor: "))
# Variavel
Cs = (5/9) * (V - 32)
Fh = (9/5) * (V + 32)
if (T == 'C'):
	msg = Fh
else:
	msg = Cs
print(round(msg, 2))



-- OUTPUT:
633.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:59:24) 
-- CODE:
# Entradas
T = input("Temperatura (C/F)? ")
V = float(input("Valor: "))
# Variavel
Cs = (5/9) * (V - 32)
Fh = (9/5) * (V + 32)
if (T == 'C'):
	msg = Cs
else:
	msg = Fh
print(round(msg, 2))



-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:59:47) 
-- CODE:
# Entradas
T = input("Temperatura (C/F)? ")
V = float(input("Valor: "))
# Variavel
Cs = (5/9) * (V - 32)
Fh = (9/5) * (V + 32)
if (T == 'C'):
	msg = Fh
else:
	msg = Cs
print(round(msg, 2))



-- OUTPUT:
633.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 19:00:08) 
-- CODE:
# Entradas
T = input("Temperatura (C/F)? ")
V = float(input("Valor: "))
# Variavel
Cs = (5/9) * (V - 32)
Fh = (9/5) * (V + 32)
if (T == 'C'):
	msg = Fh
else:
	msg = Cs
print(round(msg, 2))



-- EXECUTION TIME:
0.104833
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
633.6
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
57.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:02:18) 
-- CODE:
# Entradas
T = input("Temperatura (C/F)? ")
V = float(input("Valor: "))
# Variavel
Cs = (5/9) * (V - 32)
Fh = (9/5) * (V + 32)
if (T == 'C'):
	msg = Fh
else:
	msg = Cs
print(round(msg, 2))



-- OUTPUT:
633.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:02:54) 
-- CODE:
# Entradas
T = input("Temperatura (C/F)? ")
V = float(input("Valor: "))
# Variavel
Cs = (5/9) * (V - 32)
Fh = (9/5) * (V + 32)
if (T == 'C'):
	msg = Fh
else:
	msg = Cs
print(round(msg, 2))



-- OUTPUT:
633.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:04:06) 
-- CODE:
# Entradas
T = input("Temperatura (C/F)? ")
V = float(input("Valor: "))
# Variavel
Cs = (5/9) * (V - 32)
Fh = (9/5) * (V + 32)
if (T == 'F'):
	msg = Cs
else:
	msg = Fh
print(round(msg, 2))



-- OUTPUT:
633.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 22:14:47) 
-- CODE:
# Entradas
T = input("Temperatura (C/F)? ")
V = float(input("Valor: "))
# Variavel
Cs = (5/9) * (V - 32)
Fh = ((9 * V)/5 + 32)
if (T == 'C'):
	msg = Fh
else:
	msg = Cs
print(round(msg, 2))



-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 22:15:07) 
-- CODE:
# Entradas
T = input("Temperatura (C/F)? ")
V = float(input("Valor: "))
# Variavel
Cs = (5/9) * (V - 32)
Fh = ((9 * V)/5 + 32)
if (T == 'C'):
	msg = Fh
else:
	msg = Cs
print(round(msg, 2))



-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 22:15:18) 
-- CODE:
# Entradas
T = input("Temperatura (C/F)? ")
V = float(input("Valor: "))
# Variavel
Cs = (5/9) * (V - 32)
Fh = ((9 * V)/5 + 32)
if (T == 'C'):
	msg = Fh
else:
	msg = Cs
print(round(msg, 2))



-- EXECUTION TIME:
0.24399
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
